# ssdm

./: .gitignore  LICENSE  README.md  all_taus_1102.nc  environment.yml  feature.py  jsd_val_score_gaps_2025.json  pyproject.toml  rwcpop_dev_lmeasure_score_gaps.json  rwcpop_single_lmeasure_score_gaps.json  rwcpop_train_lmeasure_score_gaps.json  rwcpop_train_score_gaps_2025.json  rwcpop_val_lmeasure_score_gaps.json  rwcpop_val_score_gaps_2025.json  salami.py  salami_new.py  scanner.py  setup.py  split_ids.json  spliter.py  taus_1107.nc  viz.py
caches/: setup.py
ssdm/: __init__.py  archive_scanner_lightning.py  base.py  beatles.py  configs.py  core.py  env.yml  expand_hier.py  extract_features.py  feature.py  formatting.py  fw.py  fwx.py  hack.ipynb  harmonix.py  hier.py  interactive.py  jsd.py  l_score_df.pkl  l_score_justin_df.pkl  mscom.py  old_scanner.py  rwcclassical.py  rwcpop.py  salami.py  salami_new.py  salami_old.py  saragac.py  scanner.py  scanner_lightning.py  scanner_lightning_util.py  scluster.py  score_based_labels.json  spam.py  split_ids.json  spliter.py  splits.json  tau_df.pkl  train.py  train5.py  (+8 more)
ssdm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ssdm/corpus/: jsd.py  rwccls.py  rwcpop.py  slm.py  spam.py
ssdm/datasets/: __init__.py  beatles.py  hmx.py  saragac.py  slm.py
