[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssdm"
version = "0.1.1"
authors = [
  { name="Tom Xi", email="tom.xi@nyu.edu" },
]
description = "Scanning SDMs for MSA representation selection"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "pandas",
    "librosa",
    "matplotlib",
    "holoviews",
    "cycler",
    "xarray",
    "scikit-learn",
    "scipy",
    "tqdm",
    "jams",
    "mir_eval",
    "python-igraph",
    "madmom",
    "torch",
    "wandb",
    "timm",
    "lightning",
    "tensorflow",
    "tensorflow-hub",
    "crema",
    "openl3",
    "dataset",
]

[project.urls]
Homepage = "https://github.com/tomxi/ssdm"
Issues = "https://github.com/tomxi/ssdm/issues"

[tool.setuptools.packages.find]
include = ["ssdm*"] 